--- a/public/index.html
+++ b/public/index.html
@@ -79,15 +79,15 @@
 <!-- /navigation -->
 
 
-<section class="banner bg-cover" style="background-image: url('/images/banner/banner-bg.svg');">
-  <img src="/images/banner/illustration.svg" class="img-fluid illustration" alt="">
+<section class="banner bg-cover" style="background-image: url('/images/banner/bg.jpg');">
+  <img src="/" class="img-fluid illustration" alt="">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 mb-5 mb-lg-0">
         <h1>Welcome</h1>
       </div>
       <div class="col-lg-6 illustration-mobile">
-        <img src="/images/banner/illustration.svg" class="img-fluid" alt="">
+        <img src="/" class="img-fluid" alt="">
       </div>
     </div>
   </div>
