Change the background again and change the logo

--- a/public/amp/index.html
+++ b/public/amp/index.html
@@ -79,12 +79,12 @@
 <!-- /navigation -->
 
 
-<section class="banner bg-cover" style="background-image: url('/images/banner/bg.jpg');">
+<section class="banner bg-cover" style="background-image: url('/images/banner/bg.png');">
   <img src="/" class="img-fluid illustration" alt="">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 mb-5 mb-lg-0">
-        <h1>Welcome</h1>
+        <h1></h1>
       </div>
       <div class="col-lg-6 illustration-mobile">
         <img src="/" class="img-fluid" alt="">
