--- a/public/amp/index.html
+++ b/public/amp/index.html
@@ -132,7 +132,7 @@
             <img src="/images/chinese.svg" class="mr-4" alt="..."></div>
           <div class="col-md-8 text-center text-md-left">
             <h3 class="mt-0">中文</h3>
-            <p>Visit www.wuyuchong.com for the Chinese version</p>
+            <p>www.wuyuchong.com <br> for the Chinese version</p>
             
             <a href="https://www.wuyuchong.com"
               class="btn btn-primary">中文版</a>
