Change the word of under construction

--- a/public/amp/index.html
+++ b/public/amp/index.html
@@ -110,7 +110,7 @@
             <img src="/images/construction.svg" class="mr-4" alt="..."></div>
           <div class="col-md-8 text-center text-md-left">
             <h3 class="mt-0">Under Construction</h3>
-            <p>This website has just been established and still under construction</p>
+            <p>Welcome to <br> www.yuchong.com <br> This website has just been established and still under construction</p>
             
           </div>
         </div>
