--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,10 @@
 <section class="banner bg-cover" style="background-image: url('/images/banner/bg.png');">
   <div class="container">
     <div class="row">
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <h1></h1>
+      </div>
       <div class="col-lg-6 illustration-mobile">
-        <img src="/" class="img-fluid" alt="">
       </div>
     </div>
   </div>
