Starting to write about part

--- a/content/about.html
+++ b/content/about.html
@@ -4,22 +4,39 @@ title: "About"
 
 
 
-<div id="r-markdown" class="section level2">
-<h2>R Markdown</h2>
-<p>This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
-<p>When you click the <strong>Knit</strong> button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-<pre class="r"><code>summary(cars)</code></pre>
-<pre><code>##      speed           dist       
-##  Min.   : 4.0   Min.   :  2.00  
-##  1st Qu.:12.0   1st Qu.: 26.00  
-##  Median :15.0   Median : 36.00  
-##  Mean   :15.4   Mean   : 42.98  
-##  3rd Qu.:19.0   3rd Qu.: 56.00  
-##  Max.   :25.0   Max.   :120.00</code></pre>
+<center>
+<p><a href="简历_吴宇翀_中央财经大学_经济统计学.pdf"><strong>Download CV (PDF)</strong></a></p>
+</center>
+<hr />
+<div id="education" class="section level2">
+<h2>Education</h2>
+<div id="central-university-of-finance-and-economics" class="section level3">
+<h3>Central University of Finance and Economics</h3>
+<div align="right">
+Sep.2017 - June.2021
 </div>
-<div id="including-plots" class="section level2">
-<h2>Including Plots</h2>
-<p>You can also embed plots, for example:</p>
-<p><img src="/about_files/figure-html/pressure-1.png" width="672" /></p>
-<p>Note that the <code>echo = FALSE</code> parameter was added to the code chunk to prevent printing of the R code that generated the plot.</p>
+<p>主修：经济统计学</p>
+<p>辅修：金融学</p>
+<ul>
+<li>相关课程：python程序设计、c和c++语言程序设计、高级商务英语、金融学、民商法、宏观与微观经济学、会计学、概率与数理统计、统计计算等</li>
+<li>中央财经大学商学院大数据菁英班：使用R语言进行大数据分析及撰写商业报告</li>
+</ul>
+<hr />
+</div>
+</div>
+<div id="internship" class="section level2">
+<h2>Internship</h2>
+<p>internship</p>
+</div>
+<div id="research" class="section level2">
+<h2>Research</h2>
+</div>
+<div id="leadership" class="section level2">
+<h2>Leadership</h2>
+</div>
+<div id="certifications" class="section level2">
+<h2>Certifications</h2>
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
 </div>
