Change the layout of about page

--- a/content/about.html
+++ b/content/about.html
@@ -1,9 +1,10 @@
 ---
-title: "About"
+title: "WU, Yuchong"
 ---
 
 
 
+<hr />
 <center>
 <p><a href="简历_吴宇翀_中央财经大学_经济统计学.pdf"><strong>Download CV (PDF)</strong></a></p>
 </center>
