--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8">
-  <title>About</title>
+  <title>WU, Yuchong</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -106,12 +106,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto block shadow mb-5">
-        <h2><center>About</center></h2>
+        <h2><center>WU, Yuchong</center></h2>
         
         <div class="content mb-5">
           
 
 
+<hr />
 <center>
 <p><a href="简历_吴宇翀_中央财经大学_经济统计学.pdf"><strong>Download CV (PDF)</strong></a></p>
 </center>
