--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8">
-  <title>Contact Us</title>
+  <title>Contact me</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -106,8 +106,12 @@
   <div class="container">
     <div class="row justify-content-between">
       <div class="col-lg-5">
-        <h2 class="mb-4">Contact Us</h2>
-        <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor.</p>
+        <h2 class="mb-4">Contact me</h2>
+        <div class="content"><p>Email: 2017310836@email.cufe.edu.cn</p>
+
+<hr />
+
+<p>or Leave a message:</p>
 </div>
         <form method="POST" action="#" class="row">
           <div class="col-md-6">
