Continue on About

--- a/content/about.html
+++ b/content/about.html
@@ -10,34 +10,101 @@ title: "WU, Yuchong"
 </center>
 <hr />
 <div id="education" class="section level2">
-<h2>Education</h2>
+<h2>EDUCATION</h2>
 <div id="central-university-of-finance-and-economics" class="section level3">
 <h3>Central University of Finance and Economics</h3>
 <div align="right">
-Sep.2017 - June.2021
+Sep 2017 - Jun 2021
 </div>
-<p>主修：经济统计学</p>
-<p>辅修：金融学</p>
+<div align="right">
+Beijing, China
+</div>
+<p>Subject: Economic Statistics</p>
+<p>Minor: Finance</p>
 <ul>
-<li>相关课程：python程序设计、c和c++语言程序设计、高级商务英语、金融学、民商法、宏观与微观经济学、会计学、概率与数理统计、统计计算等</li>
-<li>中央财经大学商学院大数据菁英班：使用R语言进行大数据分析及撰写商业报告</li>
+<li>Related courses: python programming, c and c++ programming, Advanced Business English, Finance, Civil and Commercial Law, macro and micro economics, accounting, probability and mathematical statistics, statistical computing, etc.</li>
+<li>Big Data analysis program: using the R language to deal with large data and writing business reports.</li>
 </ul>
-<hr />
+</div>
+<div id="university-of-michigan" class="section level3">
+<h3>University of Michigan</h3>
+<div align="right">
+Jul 2019 - Sep 2019
+</div>
+<div align="right">
+Ann Arbor, USA
+</div>
+<p>Summer Program in Quantitative Methods of Social Research</p>
+<ul>
+<li>Course Grade: Regression Analysis II (A) Categorical Data Analysis (A+)</li>
+</ul>
+</div>
+<div id="uppsala-university" class="section level3">
+<h3>Uppsala University</h3>
+<div align="right">
+Sep 2019 - Jan 2020
+</div>
+<div align="right">
+Uppsala, Sweden
+</div>
+<p>Exchange Program for one semester</p>
 </div>
 </div>
 <div id="internship" class="section level2">
-<h2>Internship</h2>
-<p>internship</p>
+<h2>INTERNSHIP</h2>
+<div id="m-a-fof-investment-centerzrc-capital" class="section level3">
+<h3>M &amp; A FOF Investment Center（ZRC Capital）</h3>
+<div align="right">
+May 2019 - Sep 2019
 </div>
-<div id="research" class="section level2">
-<h2>Research</h2>
+<div align="right">
+Beijing, China
 </div>
-<div id="leadership" class="section level2">
-<h2>Leadership</h2>
+<p>Industry Research and Data Analysis</p>
 </div>
-<div id="certifications" class="section level2">
-<h2>Certifications</h2>
 </div>
-<div id="skills" class="section level2">
-<h2>Skills</h2>
+<div id="project" class="section level2">
+<h2>PROJECT</h2>
+<div id="sem-search-engine-marketing-business-analysis" class="section level3">
+<h3>SEM (Search Engine Marketing) Business Analysis</h3>
+</div>
+<div id="national-innovation-project-for-university-students" class="section level3">
+<h3>National Innovation Project for university students</h3>
+<ul>
+<li>A Comparative Study of Personnel Placement in the Reform of Government Institutions</li>
+</ul>
+</div>
+</div>
+<div id="organisation" class="section level2">
+<h2>ORGANISATION</h2>
+<div id="official-wechat-team-of-central-university-of-finance-and-economics" class="section level3">
+<h3>Official WeChat Team of Central University of Finance and Economics</h3>
+<div align="right">
+Sep 2018 - Sep 2019
+</div>
+<div align="right">
+Beijing
+</div>
+<p>Minister of administration</p>
+</div>
+</div>
+<div id="honors-awards" class="section level2">
+<h2>HONORS &amp; AWARDS</h2>
+</div>
+<div id="skills-certificates-and-other" class="section level2">
+<h2>SKILLS / CERTIFICATES AND OTHER</h2>
+<div id="skill" class="section level3">
+<h3>Skill</h3>
+<p>word/excel/ppt (proficient)</p>
+<p>R (proficiency)</p>
+<p>Python (basic)</p>
+<p>C/C++ (base)</p>
+<p>SPSS (basic)</p>
+</div>
+<div id="activities" class="section level3">
+<h3>Activities</h3>
+<p>Violin (Level 8)</p>
+<p>Singing (TOP25 in Central University of Finance and Economics Singing Contest)</p>
+<p>Calligraphy</p>
+</div>
 </div>
