Add Google Analytics ID

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -318,7 +318,7 @@ Beijing
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'Your ID', 'auto');
+  ga('create', 'UA-154227155-1', 'auto');
   ga('send', 'pageview');
 </script></body>
 </html>
