Add description on the ABOUT page

--- a/content/about.html
+++ b/content/about.html
@@ -1,5 +1,9 @@
 ---
 title: "WU, Yuchong"
+description: "Personal Website of Yuchong Wu"
+author: "Yu-chong"
+categories:
+date: "2019-12-06"
 ---
 
 
