Add ignorefile and change the grammar mistake in the config

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -111,7 +111,7 @@
 
 <hr />
 
-<p>or Leave a message:</p>
+<p>or just leave a message here:</p>
 </div>
         <form method="POST" action="#" class="row">
           <div class="col-md-6">
