Add feature: Contact Form

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -113,7 +113,7 @@
 
 <p>or just leave a message here:</p>
 </div>
-        <form method="POST" action="#" class="row">
+        <form method="POST" action="https://formspree.io/mjvkjpww" class="row">
           <div class="col-md-6">
             <input type="text" class="form-control mb-4" placeholder="Name" name="name" id="name">
           </div>
