--- a/public/about/index.html
+++ b/public/about/index.html
@@ -203,11 +203,13 @@ Beijing
 <h2>SKILLS / CERTIFICATES AND OTHER</h2>
 <div id="skill" class="section level3">
 <h3>Skill</h3>
-<p>word / exce l/ ppt (proficient)</p>
+<p>word / excel/ ppt (proficient)</p>
 <p>R (proficient)</p>
+<p>Latex (proficient)</p>
 <p>Python (basic)</p>
 <p>C / C++ (basic)</p>
 <p>SPSS (basic)</p>
+<p>HTML (basic)</p>
 </div>
 <div id="activities" class="section level3">
 <h3>Activities</h3>
