Fix a mistake in RECOMMANDATION

--- a/public/tools/index.html
+++ b/public/tools/index.html
@@ -174,8 +174,8 @@
                 <div class="card border-0 shadow">
                   <img src="/images/tools/hackmd.png" alt="Online Markdown Editor with Real-time Preview and Collaboration" class="card-img-top">
                   <div class="card-body">
-                    <h4 class="h5 mb-4"><a class="text-dark" href="https://rstudio.cloud">Online Markdown Editor with Real-time Preview and Collaboration</a></h4>
-                    <a href="https://rstudio.cloud" class="btn btn-primary">Visit Site</a>
+                    <h4 class="h5 mb-4"><a class="text-dark" href="https://hackmd.io">Online Markdown Editor with Real-time Preview and Collaboration</a></h4>
+                    <a href="https://hackmd.io" class="btn btn-primary">Visit Site</a>
                   </div>
                 </div>
               </div>
