Have a little bit change

--- a/content/presentation/factor/index.html
+++ b/content/presentation/factor/index.html
@@ -878,10 +878,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </table>
 </section><section id="conclusion" class="slide level2">
 <h2>Conclusion</h2>
-<p> </p>
-<p>The person who are worry and unease before the exam</p>
-<p>are more likely to</p>
-<p>be nervous during the exam</p>
+<p><br />
+</p>
+<p>An individual</p>
+<p>who is feeling worried and uneasey before an examination</p>
+<p>is more likely to be nervous during the examination.</p>
 </section><section id="thanks-for-watching" class="slide level2">
 <h2>Thanks for watching</h2>
 <p> </p>
