A part of translation completed

--- a/public/investment/index.html
+++ b/public/investment/index.html
@@ -121,7 +121,7 @@
               A share
               
             </div>
-            <p></p>
+            <p>Domestic and Foreign Hog Prices Domestic Hog Price Domestic hog prices have continued to rise, with an increase of 6.</p>
             <a href="/investment/pig/" class="btn btn-sm btn-outline-primary">read more</a>
           </article>
           
