--- a/content/investment/intcomedical.html
+++ b/content/investment/intcomedical.html
@@ -41,7 +41,7 @@ Judging from the situation learned by foreign media, the current epidemic situat
 <hr />
 <center>
 <p>The content of this website does not constitute any investment advice.</p>
-<p><a href="../../disclaimer">** View disclaimer **</a></p>
+<p><a href="../../disclaimer"><strong>View disclaimer</strong></a></p>
 </center>
 <hr />
 </div>
