--- a/content/investment/pig.html
+++ b/content/investment/pig.html
@@ -63,7 +63,7 @@ tags: ["investment", "A-share"]
 <hr />
 <center>
 <p>The content of this website does not constitute any investment advice.</p>
-<p><a href="../../disclaimer">** View disclaimer **</a></p>
+<p><a href="../../disclaimer"><strong>View disclaimer</strong></a></p>
 </center>
 <hr />
 </div>
